force-app/main/default/objects/System_Outage_Line__c/System_Outage_Line__c.object-meta.xml
<CustomObject>
    <description>Object for storing outage lines</description>
    <label>System Outage Line</label>
    <nameField>
        <displayFormat>OutageLine-{00000}</displayFormat>
        <label>System Outage Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>System Outage Lines</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>