force-app/main/default/objects/System_Outage_Line__c/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>Level of the subsystem in the dependency line</description>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Level - 2</fullName>
            </value>
            <value>
                <fullName>Level - 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>