force-app/main/default/objects/System_Outage_Line__c/fields/Outage_Type__c.field-meta.xml
<CustomField>
    <fullName>Outage_Type__c</fullName>
    <description>Outage type for the system in the dependency line</description>
    <label>Outage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Unplanned</fullName>
            </value>
            <value>
                <fullName>Degraded</fullName>
            </value>
            <value>
                <fullName>No Impact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>