force-app/main/default/objects/System_Outage_Line__c/fields/SortOrder__c.field-meta.xml
<CustomField>
    <fullName>SortOrder__c</fullName>
    <description>This is used for ordering the system dependencies</description>
    <label>SortOrder</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>