force-app/main/default/objects/System_Outage_Line__c/fields/System_Master__c.field-meta.xml
<CustomField>
    <fullName>System_Master__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>System which is a lookup to System Master</description>
    <label>System Master</label>
    <referenceTo>System_Master__c</referenceTo>
    <relationshipLabel>System Outage Lines</relationshipLabel>
    <relationshipName>System_Outage_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>