force-app/main/default/objects/System_Outage_Line__c/fields/System_Outage_Header__c.field-meta.xml
<CustomField>
    <fullName>System_Outage_Header__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to System Outage header object</description>
    <label>System Outage Header</label>
    <referenceTo>System_Outage__c</referenceTo>
    <relationshipLabel>System Outage Lines</relationshipLabel>
    <relationshipName>System_Outage_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>