force-app/main/default/objects/System_Outage_Line__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Outage_Header__c</columns>
    <columns>Outage_Type__c</columns>
    <columns>UPDATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>